Update builds to use jdk17 instead of jdk11